--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
 	<!-- landing page end -->
 
 	<!-- About Me Start -->
-	<div class="container-fluid">
+	<div class="container">
 		<div class="d-xl-flex justify-content-between">
-			<div class="p-3 offset-xl-1 col-xl-2 text-xl-start text-center" id=abtMe1>About Me</div>
+			<div class="p-3 col-xl-2 text-xl-start text-center" id=abtMe1>About Me</div>
 			<div class="p-3 col-xl-8" id="abtMe2"><p>On the 15th day of October 1999, a set of twins was born. The eldest came out around 6 p.m., and the younger followed after 9 minutes. On that day, the two lovers became parents. If you're wondering what does the story suppose to mean, the truth is the eldest one is me. I am David Praise Combong, and I live in the tuna capital of the Philippines, General Santos City. I graduated with a degree in Electronics Engineering from Notre Dame of Dadiangas University. Instead of taking the board exam, I pursued my almost forgotten dream - to be a web developer. I am currently a student of Zuitt Bootcamp, studying Frontend, Backend, and Full Stack Development. I know I still have a long journey ahead, but with passion, I believe that one day, everything I hoped and dreamed for will be right in front of me. And besides, I know that I am not alone, for God said in His word that He was, is, and will be with me till the end of times. And that alone gives me so much comfort and assurance that something grand is waiting for me. All that's left for me is to have faith. </p></div>
 
 		</div>
