fix image problem

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 		<h2 id= "picTitle">Pictures</h2>
 	<div class="pt-md-5 pb-md-5 p-3 d-md-flex flex-row justify-content-around">
 		<div class="p-2"><img src="./images/david2.jpg" width="350px" class="img-fluid"></div>
-		<div class="p-2"><img src="./images/dave1.png" width="350px" class="img-fluid"></div>
+		<div class="p-2"><img src="./images/pic222.jpg" width="350px" class="img-fluid"></div>
 		<div class="p-2"><img src="./images/proPic2.jpg" width="350px" class="img-fluid"></div>
 	</div>
 	</div>
@@ -95,7 +95,7 @@
 	<div class="projSection bg-warning text-center" id="projectsTitle">
 		<h2>Projects</h2>
 	<div class="pt-md-5 pb-md-5 p-3 d-md-flex flex-row justify-content-around">
-		<div class="p-2"><a href="#"><img src="./images/proj1.png" width="350px" class="img-fluid"></a></div>
+		<div class="p-2"><a href="#"><img src="./images/projectDev.jpg" width="350px" class="img-fluid"></a></div>
 		<div class="p-2"><img src="./images/soon.jpg" width="350px" class="img-fluid"></div>
 		<div class="p-2"><img src="./images/soon.jpg" width="350px" class="img-fluid"></div>
 	</div>
